tests/Parsing/positional-keyword-after-keyword.fab
#
# RUN: %fab --parse-only %s 2> %t || true
# RUN: FileCheck %s -input-file %t
#

cc = action('$CC -c $src -o $obj' <- src:file[in], obj:file[out]);

# CHECK: error: positional argument after keyword argument
obj = cc(src = file('foo.c'), file('foo.o'));
